outputs_20260331-105410-8a3c83b2/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_o_9g1x6v/src/egtm_atom_adc_tmadc_multiple_channels.c:11:
/tmp/tdd_build_o_9g1x6v/include/egtm_atom_adc_tmadc_multiple_channels.h:10:31: error: unknown type name ‘float32’; did you mean ‘_Float32’?
   10 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
In file included from /tmp/tdd_build_o_9g1x6v/src/egtm_atom_adc_tmadc_multiple_channels.c:13:
/tmp/tdd_build_o_9g1x6v/include/IfxEgtm_Pwm.h:1: error: unterminated #ifndef
    1 | #ifndef IFXEGTM_PWM_H
/tmp/tdd_build_o_9g1x6v/src/egtm_atom_adc_tmadc_multiple_channels.c:15:10: fatal error: IfxPort_PinMap.h: No such file or directory
   15 | #include "IfxPort_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.

In file included from /tmp/tdd_build_o_9g1x6v/mocks/mock_egtm_atom_adc_tmadc_multiple_channels.c:4:
/tmp/tdd_build_o_9g1x6v/include/IfxEgtm_Pwm.h:1: error: unterminated #ifndef
    1 | #ifndef IFXEGTM_PWM_H
In file included from /tmp/tdd_build_o_9g1x6v/include/IfxPort_Pinmap.h:4,
                 from /tmp/tdd_build_o_9g1x6v/mocks/mock_egtm_atom_adc_tmadc_multiple_channels.c:6:
/tmp/tdd_build_o_9g1x6v/include/IfxEgtm_Pwm.h:1: error: unterminated #ifndef
    1 | #ifndef IFXEGTM_PWM_H
/tmp/tdd_build_o_9g1x6v/include/IfxPort_Pinmap.h:7:1: error: expected specifier-qualifier-list before ‘extern’
    7 | extern IfxEgtm_Pwm_ToutMap IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT;
      | ^~~~~~
